# nemotron_rl_approach

./: .gitignore  .kaggleignore  CLAUDE.md  README.md  dataset-metadata.json  main.py  pyproject.toml  sync_kaggle.sh
.github/workflows/: kaggle-sync.yml
nemotron_grpo/: __init__.py  callbacks.py  config.py  data.py  model.py  rewards.py  trainer.py  wandb_utils.py
notebooks/: basic_loop_all_in_notebook.ipynb  nvidia-nemotron-sft-grpo-colab-faster.ipynb  nvidia-nemotron-training.ipynb
notebooks/nemotron-experiment/: kernel-metadata.json  nvidia-nemotron-experiment.ipynb
notebooks/nemotron-training/: kernel-metadata.json  nvidia-nemotron-training.ipynb
