[project]
name = "rl-llm"
version = "0.1.0"
description = "Modular GRPO training for NVIDIA Nemotron"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "bitsandbytes",
    "datasets",
    "kaggle>=2.0.1",
    "peft",
    "polars",
    "torch",
    "transformers",
    "trl",
    "wandb",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nemotron_grpo"]
